# experiments

./: 00auto.py  GUI_maker_21.py  GUI_maker_22.py  README.md  btn.idee  imgui_bricol.ini  imgui_cell.ini  main_10_btn_with_name_and_idx.py  main_12_fn_called.py  main_13_return_section_str_to_section_ref.py  main_14_jamcol.py  main_16_barre_icon_free_en_bas.py  main_17_anchor_positions.py  main_19_tobecontinued.py  main_20_more_cols.py  main_21_id_rows.py  main_21_property_len_list_of_rows.py  main_22_newdatacol.py  main_23_before_modal.py  main_24_modal_histobar.py  main_25_modalpie_real_png_should_be_buffered.py  main_28_good_pie_after_rows_and_cols.py  main_29_ascdesc.py  main_30_barplot_wrong_values.py  main_33.py  main_34_bar_listofinteger.py  main_35_cell_input_terminal.py  main_36_cell_imgui.py  main_37_subset_row_col.py  main_38_cell_bug_no_imgui.py  main_40_sql_query.py  main_5.py  main_9_clic_fn_aspecific.py  main_tabcolor.py  pyproject.toml  sec_8.py  secinput.py  secmodal.py
