[tool.poetry]
name = "kit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
arcade = "*"
imgui = "^1.4.1"
arcade-imgui = "*"
requests = "*"
sqlalchemy = "*"
sqlmodel = "*"
pandas = "*"
numpy = "*"
matplotlib = "*"
seaborn = "*"
pandasql = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
